@@ -35,6 +35,7 @@ Improvements::
 * process `pre-wrap` role in text formatter
 * drop support for the unmaintained payment font (`pf`) for use in font-based icons
 * refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
+* use first recto page after toc when media is prepress and page numbering or running content start-at value is `after-toc` (#2398)
 
 Bug Fixes::
 
